--- a/ansible/templates/kubeconfig-template.j2
+++ b/ansible/templates/kubeconfig-template.j2
@@ -1,18 +1,18 @@
 apiVersion: v1
 clusters:
 - cluster:
-    certificate-authority: /etc/kubernetes/pki/ca.crt
-    server: https://{{ environment }}-cluster.example.com:6443
-  name: {{ environment }}-cluster
+    certificate-authority: /etc/kubernetes/pki/{{ environment }}-cluster/ca.crt
+    server: {{ KUBERNETES_API_URL }}
+  name: {{ KUBERNETES_CLUSTER_NAME }}
 contexts:
 - context:
-    cluster: {{ environment }}-cluster
-    user: {{ environment }}-admin
-  name: {{ environment }}-context
-current-context: {{ environment }}-context
+    cluster: {{ KUBERNETES_CLUSTER_NAME }}
+    user: {{ KUBERNETES_CLUSTER_ADMIN }}
+  name: {{ KUBERNETES_CLUSTER_ADMIN }}@{{ KUBERNETES_CLUSTER_NAME }}
+current-context: {{ KUBERNETES_CLUSTER_ADMIN }}@{{ KUBERNETES_CLUSTER_NAME }}
 kind: Config
 users:
-- name: {{ environment }}-admin
+- name: {{ KUBERNETES_CLUSTER_ADMIN }}
   user:
-    client-certificate: /etc/kubernetes/pki/{{ environment }}-admin.crt
-    client-key: /etc/kubernetes/pki/{{ environment }}-admin.key
+    client-certificate: /etc/kubernetes/pki/{{ environment }}-cluster/apiserver-kubelet-client.crt
+    client-key: /etc/kubernetes/pki/{{ environment }}-cluster/apiserver-kubelet-client.key
